model mapper fixed hotel,room,admin,editor